@@ -3,6 +3,7 @@ package com.user.service;
 import com.user.entity.User;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -10,10 +11,10 @@ public class UserServiceImpl implements UserService {
 
     //fake user list
 
-    List<User> list = List.of(
-            new User(1311L, "Durgesh Tiwari", "23525625"),
-            new User(1312L, "Ankit Tiwari", "99999"),
-            new User(1314L, "Ravi Tiwari", "888")
+    List<User> list = Arrays.asList(
+            new User(1311L, "Neelesh Sharma", "8675567856"),
+            new User(1312L, "Shailesh Sharma", "9878767876"),
+            new User(1314L, "Ravi Sharma", "9889898989")
     );
 
     @Override
